.apex/unpackaged/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Backup</fullName>
        <active>false</active>
        <errorConditionFormula>OR( 
Ispickval(Priorvalue(StageName), &apos;Prospecting&apos;)&amp;&amp; !Ispickval((StageName), &apos;Qualification&apos;), 
Ispickval(Priorvalue(StageName), &apos;Qualification&apos;)&amp;&amp; !Ispickval((StageName), &apos;Needs Analysis&apos;),
Ispickval(Priorvalue(StageName), &apos;Needs Analysis&apos;)&amp;&amp; !Ispickval((StageName), &apos;Value Proposition&apos;),
Ispickval(Priorvalue(StageName), &apos;Value Proposition&apos;)&amp;&amp; !Ispickval((StageName), &apos;Id. Decision Makers&apos;),
Ispickval(Priorvalue(StageName), &apos;Id. Decision Makers&apos;)&amp;&amp; !Ispickval((StageName), &apos;Perception Analysis&apos;),
Ispickval(Priorvalue(StageName), &apos;Perception Analysis&apos;)&amp;&amp; !Ispickval((StageName), &apos;Proposal/Price quote&apos;),
Ispickval(Priorvalue(StageName), &apos;Proposal/Price quote&apos;)&amp;&amp; !Ispickval((StageName), &apos;Negotiation/Review&apos;),
Ispickval(Priorvalue(StageName), &apos;Negotiation/Review&apos;)&amp;&amp; !  or(ISPICKVAL(StageName, &apos;Closed won&apos;), 
ISPICKVAL(StageName,&apos;Closed Lost&apos;) ) 
)</errorConditionFormula>
        <errorMessage>Bakup</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Validation_Rules</fullName>
        <active>true</active>
        <errorConditionFormula>AND (NOT (ISNEW()),
OR( 
Ispickval(Priorvalue(StageName), &apos;Prospecting&apos;)&amp;&amp; !Ispickval(StageName, &apos;Qualification&apos;), 
Ispickval(Priorvalue(StageName), &apos;Qualification&apos;)&amp;&amp; !Ispickval((StageName), &apos;Needs Analysis&apos;),
Ispickval(Priorvalue(StageName), &apos;Needs Analysis&apos;)&amp;&amp; !Ispickval((StageName), &apos;Value Proposition&apos;),
Ispickval(Priorvalue(StageName), &apos;Value Proposition&apos;)&amp;&amp; !Ispickval((StageName), &apos;Id. Decision Makers&apos;),
Ispickval(Priorvalue(StageName), &apos;Id. Decision Makers&apos;)&amp;&amp; !Ispickval((StageName), &apos;Perception Analysis&apos;),
Ispickval(Priorvalue(StageName), &apos;Perception Analysis&apos;)&amp;&amp; !Ispickval((StageName), &apos;Proposal/Price quote&apos;),
Ispickval(Priorvalue(StageName), &apos;Proposal/Price quote&apos;)&amp;&amp; !Ispickval((StageName), &apos;Negotiation/Review&apos;),
Ispickval(Priorvalue(StageName), &apos;Negotiation/Review&apos;)&amp;&amp; !  or(ISPICKVAL(StageName, &apos;Closed won&apos;), 
ISPICKVAL(StageName,&apos;Closed Lost&apos;) ) 
))</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>navigation to the stages is not proper.Please check the document</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Stage_validation</fullName>
        <active>false</active>
        <errorConditionFormula>OR( 
Ispickval(Priorvalue(StageName), &apos;Prospecting&apos;)&amp;&amp; !Ispickval((StageName), &apos;Qualification&apos;), 
Ispickval(Priorvalue(StageName), &apos;Qualification&apos;)&amp;&amp; !Ispickval((StageName), &apos;Needs Analysis&apos;),
Ispickval(Priorvalue(StageName), &apos;Needs Analysis&apos;)&amp;&amp; !Ispickval((StageName), &apos;Value Proposition&apos;),
Ispickval(Priorvalue(StageName), &apos;Value Proposition&apos;)&amp;&amp; !Ispickval((StageName), &apos;Id. Decision Makers&apos;),
Ispickval(Priorvalue(StageName), &apos;Id. Decision Makers&apos;)&amp;&amp; !Ispickval((StageName), &apos;Perception Analysis&apos;),
Ispickval(Priorvalue(StageName), &apos;Perception Analysis&apos;)&amp;&amp; !Ispickval((StageName), &apos;Proposal/Price quote&apos;),
Ispickval(Priorvalue(StageName), &apos;Proposal/Price quote&apos;)&amp;&amp; !Ispickval((StageName), &apos;Negotiation/Review&apos;)
)</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>Process should be followed as per the tasks assigned by Sandeep Adhikari</errorMessage>
    </validationRules>
</CustomObject>